tests/fixtures/pass/persistent-unsupported-object-shape/input.ts
import {q} from "typestage";

const runtimeValue = {
  get value() {
    return 1;
  },
  [Symbol("x")]: 2,
};

export const expr = q.expr`
  ${runtimeValue}
`;
